# multilayer_caching_memcached

./: .gitignore  Makefile  README.md  pyproject.toml
builder-tools/: Containers.mk  Packages.mk
cacheService/: __init__.py  application.yml  wsgi.py
cacheService/deploy/: Dockerfile  docker-compose.yml
cacheService/src/: app.py
cacheService/src/elastic/: elastic.py
cacheService/src/log/: __init__.py  log.py
cacheService/src/memcached/: memcached.py
cacheService/src/models/: SearchQuery.py
cacheService/src/postgres/: postgres.py
cacheService/src/repositories/: SearchQueryRepo.py
cacheService/src/resources/: Report.py  Search.py
cacheService/src/tokenizer/: tokenizer.py
multilayer_caching_memcached/: app.py  application.yml  wsgi.py
multilayer_caching_memcached/deploy/: Dockerfile  docker-compose.yml
multilayer_caching_memcached/src/: server.py
multilayer_caching_memcached/src/elastic/: __init__.py  elastic.py
multilayer_caching_memcached/src/memcached/: __init__.py  memcached.py
multilayer_caching_memcached/src/models/: SearchQuery.py  __init__.py
multilayer_caching_memcached/src/postgres/: postgres.py
multilayer_caching_memcached/src/repositories/: SearchQueryRepo.py
multilayer_caching_memcached/src/resources/: Report.py  Search.py  Test.py
multilayer_caching_memcached/src/tokenizer/: tokenizer.py
postman/: Caching Service.postman_collection.json
